[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMEasyTools"
version = "0.21"
authors = [{ name = "Zbigniew Łukasiak", email = "zzbbyy@gmail.com" }, { name = "Natalia Borovskikh" }]
description = "OpenAI tools and functions with no fuss."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "docstring_parser~=0.15",
    "openai~=1.23"
]
[project.urls]
repository = "https://github.com/zby/LLMEasyTools"

[tool.setuptools]
packages = ["llm_easy_tools"]

[project.optional-dependencies]
test = ["pytest~=7.4.4"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.setuptools.dynamic]
# Add dynamic setuptools configurations if needed
